2009-07-17  Darren Kenny  <darren.kenny@sun.com>

	* capplet/main.c, daemon/main.c:
	  Disable Unique app when using debug mode.
	* common/nwamui_daemon.h, common/nwamui_daemon.c: 
	  Another part of the fix for defect#9766 which should be taking more
	  notice of the object action and state events.
	  Also fixed an issue where all location events were being processed
	  as if they were the active location, causing an incorrect panel icon
	  state to be shown.
	* common/nwamui_ncu.h, common/nwamui_ncu.c: 
	  Change nwamui_ncu_get_connection_state to use state information from
	  NWAM rather then dladm - there is more useful information here. As a
	  consequence also added some extra useful states and matching
	  strings - e.g. DHCP Timed out, Waiting for Address, etc.
	* common/libnwamui.c: 
	  Update for new NCU states.
	* daemon/notify.c: 
	  Remove unused last_message and similar functions. Added a debug
	  statement to output messages so we can see them in debug logs.

2009-07-17  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_wireless_dialog.c (nwam_pref_init), (help):
	Fixed doo#9499 help does not launch from the
	"Add wireless Network" dialog.
	* data/Makefile.am: Forget this file.

2009-07-17  Lin Ma  <Lin.Ma@Sun.COM>

	* Makefile.am:
	* capplet/main.c (main):
	* configure.in:
	* daemon/Makefile.am:
	* daemon/main.c (main):
	* daemon/nwam-manager.desktop.in:
	* daemon/nwam-manager.schemas.in:
	* data/nwam-manager.desktop.in:
	* data/nwam-manager.schemas.in:
	Use libunique. Add a very simple code to fix doo#9771.
	Remove old singleton code.
	* data/nwam-manager-properties.desktop.in:
	Add a panel menuitem for network locations, doo#9494
	* daemon/status_icon.c (daemon_ncu_up), (daemon_ncu_down):
	Add two comments.
	* capplet/nwam_location_dialog.c (apply):
	Fix doo#10028 nwam-manager-properties -l ok button does not
	close dialog - sparc 
	
2009-07-16  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_model_find_max_name_suffix),