@@ -1,5 +1,14 @@
 2009-07-17  Darren Kenny  <darren.kenny@sun.com>
 
+	* common/nwamui_daemon.c: 
+	  Fix some bugs in how the active_env was being tracked, resulting in
+	  the wrong value. 
+	* daemon/status_icon.c: 
+	  Change how daemon_status_changed calls callbacks for changes in
+	  location and ncp, it generates a lot of these when punching in/out.
+
+2009-07-17  Darren Kenny  <darren.kenny@sun.com>
+
 	* capplet/main.c, daemon/main.c:
 	  Disable Unique app when using debug mode.
 	* common/nwamui_daemon.h, common/nwamui_daemon.c: 
